// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/Button Dangerous Button 1`] = `
<button
  className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-error text-error hover:bg-error hover:bg-opacity-10"
  type="button"
  variant="dangerous"
>
  I am a dangerous button
</button>
`;

exports[`Storyshots UI Elements/Button Dangerous Disabled Button 1`] = `
<button
  className="inline-block text-lg px-4 py-2 font-headline transition cursor-default text-error"
  disabled={true}
  type="button"
  variant="dangerous"
>
  I am a dangerous disabled button
</button>
`;

exports[`Storyshots UI Elements/Button Default Button 1`] = `
<button
  className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green border border-purple hover:bg-opacity-10 hover:bg-green hover:border-green"
  type="button"
>
  I am a button
</button>
`;

exports[`Storyshots UI Elements/Button Default Disabled Button 1`] = `
<button
  className="inline-block text-lg px-4 py-2 font-headline transition cursor-default border border-gray-400 text-gray-400"
  disabled={true}
  type="button"
>
  I am a default disabled button
</button>
`;

exports[`Storyshots UI Elements/Button Primary Button 1`] = `
<button
  className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green bg-purple text-white font-bold hover:bg-blue hover:text-green"
  type="button"
  variant="primary"
>
  I am a primary button
</button>
`;

exports[`Storyshots UI Elements/Button Primary Disabled Button 1`] = `
<button
  className="inline-block text-lg px-4 py-2 font-headline transition cursor-default bg-gray-200 text-gray-400"
  disabled={true}
  type="button"
  variant="primary"
>
  I am a primary disabled button
</button>
`;
